--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "1.0.0",
+    "csv-loader": "3.0.2",
     "file-loader": "1.1.11",
     "style-loader": "0.21.0",
     "webpack": "4.16.4",
-    "webpack-cli": "3.1.0"
+    "webpack-cli": "3.1.0",
+    "xml-loader": "1.2.1"
   },
   "dependencies": {
     "lodash": "4.17.10"
