--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Alex Karle",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
     "csv-loader": "3.0.2",
     "file-loader": "1.1.11",
+    "html-webpack-plugin": "3.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.16.4",
     "webpack-cli": "3.1.0",
